style-max.css
/* ... */
.single #left img                     {margin-left: 10px; margin-right: 10px;}
.banner.medium                        {width: 300px; height: 250px;}
img.banner.sky                        {width: 120px; height: 600px; margin-left: 24px; margin-right: 24px;}
span.banner.sky                       {margin-left: 12px; margin-right: 12px; display: block;} /* Google already adds 12px margin on each side */
.twitter img                          {width: 32px; height: 32px;}
#middle .trailers object, 
#middle .trailers img                 {width: 300px; height: 190px;}
.single .trailers object,
.single .trailers iframe              {width: 743px; height: 1200px;}
#left dd img                          {width: auto; float: none; vertical-align: middle;}
img.tracker                           {width: 1px; height: 1px;}

/* BORDERS */
img, a img                            {border-width: 1px; border-style: solid;}
h1 img, .colaboraciones img, .sponsors img {border-width: 0px;}
img.banner                            {border-style: dotted;}

#right li.newsletter form             {border-width: 1px; border-style: solid;}
.twitter li                           {border-top-width: 1px; border-top-style: solid;}
#footer, .twitter ul                  {border-bottom-width: 1px; border-bottom-style: solid;}

tbody, tr, td hr          {width: 767px;}
th, td                    {padding-left: 0.5em; padding-right: 0.5em; border-right-width: 1px; border-right-style: solid; border-bottom-width: 1px; border-bottom-style: solid;}
td                        {padding-top: 0.5em; padding-bottom: 0.5em;}
tr.header, th             {height: 44px;}
th                        {background-image: url(images/sprite.png); background-color: transparent;}
th                        {background-position: -554px -898px;}
th.first                  {background-position: -544px -898px;}
th.last                   {background-position: right -898px;}
                          
th.first                  {padding-left: 10px;}
th.last                   {padding-right: 10px; border-right-width: 0px;}
tr.empty                  {height: 10px;}
th                        {border-color: #d1ce92;}
td                        {border-color: #cccccc;}
tr.empty td               {padding: 0.1em 0  0.4em 0; border-right-width: 0px;}
tr.empty td hr            {border: 0; border-top: 1px dotted #aaa;}

.sponsors img             {border-top-width: 1px;}

/* Firefox does not draw borders around OBJECT. Fixed with: */
#middle .trailers object  {border-left: 0; border-right: 0; margin-left: 1px; margin-right: 1px;}
#middle .trailers         {background-color: #cecac3;}
#middle .trailers big     {background-color: #fff;}

/* IE7 does non properly clear floats. Fixed with: */
#menu, .publ, #left       {clear: none;}

/* ECO begins */

.ecolinks {border-bottom: 1px dotted #ccc; margin-right: 12px; height: 30px; font-family: Arial, Helvetica; font-size: 0.7em; }
.ecolinks li {float: left; border-right: 1px solid #ccc; border-bottom: 1px solid #ccc; padding: 5px; font-weight: bold;}
/* .ecologo + .ruta + .fullbanner (468) = #page (990) */
.ecologo {width: 300px; margin-left: 5px;}
a.ecologo:hover {background-color: transparent;}
.ruta {width:188px; padding-left: 10px; padding-right: 5px; border-left: 2px solid #666666; color: #666666; float: left; font-size: 1.4em;}
.ecologo {margin-top:10px;}
.ruta {margin-top:15px; padding-top: 5px;}

.cont2 {float: right; margin-top: 10px;}
#login-cont {position: relative;}
.ecolinks a.login-boton {margin-left: 5px; background-color: #f60; padding: 5px 20px 5px 5px; color: #fff; border-radius: 4px; font-style: normal; font-weight: bold; background-image:url(images/toggle_down_light.png);background-repeat:no-repeat;background-position:100% 50%;}
.ecolinks a.login-boton:hover {background-color:#333;}

.ecoheader {margin-top: 5px;}
.ecomenu {clear: both; margin-left: 5px; /* as .ecologo */ margin-right: 12px; background-color:#f60; height: 25px; font-size: 0.8em;  border-bottom: 3px solid #C34E00; font-family: Arial, Helvetica; }
.ecomenu li {float: left; background-color:#f60; padding: 5px 4px 5px 5px; border-right:1px solid #C34E00;}
.ecomenu li:last-child {border-right-width: 0px;}
.ecomenu li.inset {background-color: #fff;
  border-color: #999999 #999999 #FFFFFF;
  border-style: solid;
  border-width: 1px 1px 2px;
  height: 16px;
  margin-right: 1px;
  margin-left: 1px;
  margin-top: -1px;}
.ecomenu li.inset a {color: #000;}  
.ecomenu a, .ecolinks a {font-style: normal;}
.ecomenu a:hover, .ecolinks ul a:hover {background-color: transparent;}
.ecolinks a {color: #666; font-weight: bold;}
.ecomenu a {color: #fff; font-weight: bold;}
.ecomenu a:hover {color: #000;}

.login-menu {clear: both;
    margin-bottom: 0.5em; background-color: #ECEBE5;
    border: 1px none transparent;
    border-bottom-left-radius: 5px;
    border-bottom-right-radius: 5px;
    border-top-left-radius: 5px;
    color: #778899;
    display: none;
    font-size: 11px;
    margin-right: 0;
    padding: 12px;
    position: absolute;
    right: 0;
    text-align: left;
    margin-top: 9px;
    width: 420px;
    z-index: 9900;}

.field1 {    border-right: 1px solid #CCCCCC;
       float: left;
       width: 240px;}
.field2 {       float: left;
        padding-left: 10px;
        width: 160px;}  
.field1 h4, .field2 h4 {        color: #666666; font-family: Georgia, "Times New Roman", Times, serif;
           font-size: 13px; border: 0; padding-bottom: 0;
           font-weight: bold;
           margin: 0 0 5px;}     
 .login-menu p.login-enlace, .login-menu p.complete {           clear: both;
             margin: 5px 0;}
 
 .login-menu p {                margin: 0; border: 0; padding: 0;
             }
             
.login-menu input, .login-menu select {             border: 1px solid #C3C3C3;
              margin: 0 3px;
              padding: 2px;
              vertical-align: middle;}
/* ... */

